<resources>
    <string name="app_name">Architecture Sample</string>
    <string name="contact_information">Contact Information</string>
    <string name="location">Location</string>
    <string name="users">Users</string>
    <string name="nasa">Nasa</string>
    <string name="usernameOrEmail">Username or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="description_sign_up">Not a member yet? Sign Up</string>
    <string name="description_sign_in">Already have an account? Sign In</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="title_forgot_password">Forgot password</string>
</resources>
